Added Css for the Header.

--- a/ViatoursWebsite.html
+++ b/ViatoursWebsite.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8" />
     <title>title</title>
+    <link rel="stylesheet" href="Style.css">
 </head>
 
 <body>
-    <header>
-        <img src="Media/logo.svg.png">
-        <nav>
+    <header class="header">
+        <img class="logo" src="Media/logo.svg.png">
+        <nav class="nav">
             <a>Destination</a>
             <a>Activities</a>
             <a>Contact</a>
             <a>Sign Up</a>
-            <a></a>
-            <button>log In</button>
+            <button class="login-button">log In</button>
         </nav>
     </header>
     <main>
@@ -54,7 +54,7 @@
                 </h5>
                 <p>
                     Parcourez et réservez des visites
-                    et des activités tellement incroyable, tu voudras le dire à tonamis.
+                    et des activités tellement incroyable, tu voudras le dire à tonamis.
                 </p>
                 <img src="Media/diamond.svg fill.png">
                 <h5>
@@ -69,17 +69,20 @@
                 </h5>
                 <p>
                     Nouveau prix? Nouveau plan? Aucun problème.
-                    Nous sommes là pour vous aider, 24h/24 et 7j/7.
+                    Nous sommes là pour vous aider,24h/24 et 7j/7.
                 </p>
 
             </div>
 
         </section>
     </main>
-    <footer>
-        <h3>Contact</h3>
-        <p>N 433 Immeubles 3 Rue Zohour, Béni Mellal</p>
-        <p>contact@viatours.com</p>
+    <footer class=" footer">
+        <div>
+            <h3>Contact</h3>
+            <p>N 433 Immeubles 3 Rue Zohour, Béni Mellal</p>
+            <p>contact@viatours.com</p>
+        </div>
+
     </footer>
 
 </body>
