--- a/ViatoursWebsite.html
+++ b/ViatoursWebsite.html
@@ -5,18 +5,26 @@
     <meta charset="UTF-8" />
     <title>title</title>
     <link rel="stylesheet" href="Style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
     <header class="header">
-        <img class="logo" src="Media/logo.svg.png">
-        <nav class="nav">
+        <img height="25PX" width="125px" class="logo" src="Media/logo.svg.png">
+
+        <span class="nav">
             <a>Destination</a>
             <a>Activities</a>
             <a>Contact</a>
             <a>Sign Up</a>
             <button class="login-button">log In</button>
-        </nav>
+
+        </span>
+
+
     </header>
     <main>
         <section>
