css for the main part

--- a/ViatoursWebsite.html
+++ b/ViatoursWebsite.html
@@ -27,58 +27,78 @@
 
     </header>
     <main>
-        <section>
+        <section class="topSection">
             <div class="left-col">
-                <h1>Des Souvenirs De Voyage Que Vous N'oublierez Jamais.
+                <h1 class="headline">Des Souvenirs De Voyage Que Vous N'oublierez <span
+                        style="color: rgb(255, 98, 0); font-weight: bolder;">Jamais</span>
                 </h1>
-                <p>Des escapades locales aux aventures lointaines, trouvez ce qui vous rend heureux.n'importe
+                <p class="headlineparagraph">Des escapades locales aux aventures lointaines, trouvez ce qui vous rend
+                    heureux.n'importe
                     quand n'importe ou</p>
-                <button>Explorer Plus</button>
+                <button class="ExpPlus-button">Explorer Plus</button>
             </div>
 
             <div class="right-col">
-                <img src="Media/Big_pic.png" height="200" width="200" alt="HeroImage">
+                <img class="Big_pic" src="Media/Big_pic.png" height="420" width="420" alt="HeroImage">
             </div>
         </section>
 
-        <section>
+
+
+
+
+        <section class="bottomSection">
             <div>
                 <h3>Pourqoi Nous</h3>
             </div>
 
-            <div>
-                <img src="Media/ticket.svg.png">
-                <h5>
-                    Flexibilité ultime
-                </h5>
-                <p>
-                    Vous avez le contrôle, avec gratuité options d'annulation et de
-                    paiement pour satisfaire n'importe quel plan ou budget.
-                </p>
+            <div class="qualities">
 
-                <img src="Media/hot-air-balloon.svg.png">
-                <h5>
-                    Expériences mémorables
-                </h5>
-                <p>
-                    Parcourez et réservez des visites
-                    et des activités tellement incroyable, tu voudras le dire à tonamis.
-                </p>
-                <img src="Media/diamond.svg fill.png">
-                <h5>
-                    Qualité
-                </h5>
-                <p>
-                    Normes de haute qualité. Des millions de Commentaires.
-                </p>
-                <img src="Media/medal.svg fill.png">
-                <h5>
-                    Award-winning support
-                </h5>
-                <p>
-                    Nouveau prix? Nouveau plan? Aucun problème.
-                    Nous sommes là pour vous aider,24h/24 et 7j/7.
-                </p>
+                <div class="ticket">
+                    <img id="minipic" src="Media/ticket.svg.png">
+                    <h5 id="qualitiestitle">
+                        Flexibilité ultime
+                    </h5>
+                    <p id="qualitiesparagraph">
+                        Vous avez le contrôle, avec gratuité options d'annulation et de
+                        paiement pour satisfaire n'importe quel plan ou budget.
+                    </p>
+
+                </div>
+
+                <div class="hot-air-balloon">
+                    <img  id="minipic" src="Media/hot-air-balloon.svg.png">
+                    <h5 id="qualitiestitle">
+                        Expériences mémorables
+                    </h5>
+                    <p id="qualitiesparagraph">
+                        Parcourez et réservez des visites
+                        et des activités tellement incroyable, tu voudras le dire à tonamis.
+                    </p>
+                </div>
+
+                <div class="diamond">
+                    <img   id="minipic" src="Media/diamond.svg fill.png">
+                    <h5 id="qualitiestitle">
+                        Qualité
+                    </h5>
+                    <p id="qualitiesparagraph">
+                        Normes de haute qualité. Des millions de Commentaires.
+                    </p>
+                </div>
+
+                <div class="medal">
+                    <img   id="minipic" src="Media/medal.svg fill.png">
+                    <h5 id="qualitiestitle">
+                        Award-winning support
+                    </h5>
+                    <p id="qualitiesparagraph">
+                        Nouveau prix? Nouveau plan? Aucun problème.
+                        Nous sommes là pour vous aider,24h/24 et 7j/7.
+                    </p>
+                </div>
+
+
 
             </div>
 
@@ -90,6 +110,13 @@
             <p>N 433 Immeubles 3 Rue Zohour, Béni Mellal</p>
             <p>contact@viatours.com</p>
         </div>
+        <!-- <p>
+            <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px"
+                    src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                    alt="Valid CSS!" />
+                </a>
+            </p>-->
 
     </footer>
 
