--- a/ViatoursWebsite.html
+++ b/ViatoursWebsite.html
@@ -49,7 +49,7 @@
 
         <section class="bottomSection">
             <div>
-                <h3>Pourqoi Nous</h3>
+                <h3>Pourqoi Nous</h3><br><br>
             </div>
 
             <div class="qualities">
@@ -104,19 +104,21 @@
 
         </section>
     </main>
-    <footer class=" footer">
+    <footer class="footer">
         <div>
-            <h3>Contact</h3>
-            <p>N 433 Immeubles 3 Rue Zohour, Béni Mellal</p>
-            <p>contact@viatours.com</p>
+           <h2>  Contact </h2><br><br>
+            <p class="p1">N 433 Immeubles 3 Rue Zohour, Béni Mellal</p><br>
+            <p class="p1">contact@viatours.com</p><br>
         </div>
-        <!-- <p>
+          
+          
+         <p>
             <a href="http://jigsaw.w3.org/css-validator/check/referer">
                 <img style="border:0;width:88px;height:31px"
                     src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
                     alt="Valid CSS!" />
                 </a>
-            </p>-->
+            </p>
 
     </footer>
 
